k8s/base/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: default-deny-all
  namespace: app

spec:
  podSelector: {}

  policyTypes:
    - Ingress
    - Egress

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: allow-frontend-ingress
  namespace: app

spec:
  podSelector:
    matchLabels:
      app: frontend

  policyTypes:
    - Ingress

  ingress:
    - from: []

      ports:
        - protocol: TCP
          port: 80

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: allow-backend-from-frontend
  namespace: app

spec:
  podSelector:
    matchLabels:
      app: backend

  policyTypes:
    - Ingress
    - Egress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: frontend

      ports:
        - protocol: TCP
          port: 3000

  egress:
    - to:
        - podSelector:
            matchLabels:
              app: mongodb

      ports:
        - protocol: TCP
          port: 27017

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: allow-mongodb-from-backend
  namespace: app

spec:
  podSelector:
    matchLabels:
      app: mongodb

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: backend

      ports:
        - protocol: TCP
          port: 27017
